--- a/app/views/questions/ask.html.erb
+++ b/app/views/questions/ask.html.erb
@@ -1,4 +1,5 @@
 <h2>Ask the oracle</h2>
+<p>Ask your coach anything</p>
 <form action="/answer">
   <input type="text" name="question" class="text-field">
   <input type="submit" value="Ask!" class="btn-submit">
